Iframe might not be notified the mouse leaving if restyle happens
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P3)
Tracking
()
People
(Reporter: edgar, Assigned: edgar)
References
Details
Attachments
(1 file)
mLastOverFrame
is used for notifying the sub-document the mouse out, it is a WeakFrame, so it could possibly be nulled-out after restyling and the sub-document won't be notified the mouse leaving.
Found this while working on bug 1653949, it adds new tests to test if the mouseenter
/mouseleave
event is fired properly while switching tab, but the test-verify on try will consistently get timeout due to the lack of mouseleave
event on an iframe.
Updated•5 years ago
|
Comment 1•5 years ago
|
||
Edgar, does this new test failure happen in both Fission and non-Fission modes?
Assignee | ||
Comment 2•5 years ago
|
||
(In reply to Chris Peterson [:cpeterson] from comment #1)
Edgar, does this new test failure happen in both Fission and non-Fission modes?
Yes, it happens in non-Fission mode. And I think it is a long-existing behavior.
Comment 3•5 years ago
|
||
(In reply to Edgar Chen [:edgar] (PTO 08/21) from comment #2)
Yes, it happens in non-Fission mode. And I think it is a long-existing behavior.
Thanks. In that case, I'll clear the Fission flag.
Assignee | ||
Comment 4•5 years ago
|
||
mLastOverFrame is a WeakFrame, it could possibly be nulled-out, for example
after restyling, and the sub-document won't be able to be notified the mouse
leaving.
Updated•5 years ago
|
Assignee | ||
Comment 5•5 years ago
|
||
Comment 7•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Description
•