Bug 1659940 - Use mLastOverElement to notify the mouse leaving for an iframe; r=smaug

mLastOverFrame is a WeakFrame, it could possibly be nulled-out, for example
after restyling, and the sub-document won't be able to be notified the mouse
leaving.

Differential Revision: https://phabricator.services.mozilla.com/D98787